Updated git links in examples

--- a/src/content/example/Fastify Boilerplate.mdx
+++ b/src/content/example/Fastify Boilerplate.mdx
@@ -42,6 +42,6 @@ Check out an example below and don’t forget—you can always peek at the code 
 
 import GithubLink from '@/components/astro/markdown/GithubLink.astro'
 
-<GithubLink href="https://github.com/flexscss/unkn" class="w-full" />
+<GithubLink href="https://github.com/flexscss/fastify-boilerplate" class="w-full" />
 
 </Container>
