--- a/src/content/example/Javascript Playground.mdx
+++ b/src/content/example/Javascript Playground.mdx
@@ -22,7 +22,7 @@ It’s not a polished product, just a playground for fellow code enthusiasts to 
 
 import GithubLink from '@/components/astro/markdown/GithubLink.astro'
 
-<GithubLink href="https://github.com/flexscss/unknwn.tech-astro" />
+<GithubLink href="https://github.com/flexscss/unknwn.tech-astro/tree/main/src/components/vue/examples/playground" />
 
 **Play around with it!** The component is right below — you can resize the panels, and changes are applied with a 1-second debounce to keep things smooth.
 </Container>
