--- a/src/content/example/Sasflix.mdx
+++ b/src/content/example/Sasflix.mdx
@@ -27,11 +27,11 @@ import GithubLink from '@/components/astro/markdown/GithubLink.astro'
 <div class="grid grid-cols-2 sm:grid-cols-1 gap-4 text-center">
 	<div>
 		**Nuxt app**
-		<GithubLink href="https://github.com/flexscss/unknwn.tech-astro" class="w-full" />
+		<GithubLink href="https://github.com/flexscss/sasflix" class="w-full" />
 	</div>
 	<div>
 		**Vue app inside Astro**
-		<GithubLink href="https://github.com/flexscss/unknwn.tech-astro" class="w-full" />
+		<GithubLink href="https://github.com/flexscss/unknwn.tech-astro/tree/main/src/components/vue/examples/sasflix" class="w-full" />
 	</div>
 </div>
 
